Alinur Tatsama Font Added

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,7 @@
 @import url(../public/css/anek-bangla.css);
 @import url(../public/css/tiro-bangla.css);
 @import url(../public/css/bonbonia-kajla.css);
+@import url(../public/css/alinur-tatsama.css);
 
 :root {
   --foreground-rgb: 0, 0, 0;
