Alinur Borno Bikas Font Added

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,7 @@
 @import url(../public/css/tiro-bangla.css);
 @import url(../public/css/bonbonia-kajla.css);
 @import url(../public/css/alinur-tatsama.css);
+@import url(../public/css/alinur-borno-bikas.css);
 
 :root {
   --foreground-rgb: 0, 0, 0;
